# NekoNeo

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
Tauri重构/: 01_项目总览与技术选型.md  02_后端架构设计规范.md  03_前端架构设计规范.md  04_前端UIUX设计规范.md  05_开发规范与工作流.md  06_重构缺口追踪.md  07_全自动发布流程.md
scripts/: dev-launch.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  errors.rs  main.rs
src-tauri/src/commands/: app.rs  auth.rs  config.rs  mod.rs  privacy.rs  screenshot.rs  service.rs  system.rs  update.rs
src-tauri/src/models/: auth.rs  config.rs  mod.rs  screenshot.rs  service.rs  system.rs  update.rs
src-tauri/src/services/: api_client.rs  autostart.rs  config_store.rs  device_fingerprint.rs  mod.rs  screenshot.rs  status_reporter.rs  system_info.rs  update_service.rs
src/api/: commands.ts
src/components/base/: NBadge.vue  NButton.vue  NIcon.vue  NInput.vue  NSelect.vue  NSwitch.vue
src/components/layout/: AppShell.vue  Dock.vue  PageContainer.vue  TopBar.vue
src/components/widgets/: LogEntry.vue  MetricRow.vue  QuickToggle.vue  StatusCard.vue  ToastContainer.vue
src/composables/: useConfig.ts  useDesktopNotifications.ts  useLatestScreenshot.ts  useMetrics.ts  useService.ts  useTheme.ts
src/router/: index.ts
src/stores/: auth.ts  config.ts  metrics.ts  service.ts  toast.ts  ui.ts
src/styles/: animations.css  base.css  tokens.css
src/types/: app.ts  auth.ts  config.ts  index.ts  service.ts  system.ts  update.ts
src/views/: About.vue  Console.vue  Dashboard.vue  Privacy.vue  PrivacyPicker.vue  Settings.vue
