[package]
name = "nekoneo"
version = "2.0.0-alpha"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
