[package]
name = "nekoneo"
version = "2.0.0-alpha"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
tauri = { version = "2.0.0", features = [] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
winreg = "0.55"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Power",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
] }
windows-core = "0.61"

[dev-dependencies]
mockito = "1.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
