[package]
name = "nekoneo"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
screenshots = "0.8.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
winreg = "0.55"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Power",
  "Win32_System_SystemInformation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Media_Control"
] }
windows-core = "0.61"

[dev-dependencies]
mockito = "1.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
